chore(*) add test suite && plugins